# train_tickets_tgbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  logger.py  main.py  pyproject.toml
app/: bot.py  constants.py  handlers.py  settings.py  task_manager.py  utils.py
app/db/: database_connection.py  ticket_request_repo.py
tests/: test_e2e.py  test_integration.py  test_unit.py
